@@ -1,3 +1,7 @@
+Fri Dec  2 16:18:09 2005  Tim Janik  <timj@imendio.com>
+
+	* glib/gslice.c: some naming and type size fixups.
+
 Fri Dec  2 13:08:58 2005  Tim Janik  <timj@gtk.org>
 
         * glib/gslice.h (g_slice_free): reworked GCC-specific type-safe macro
